# model-generalization-paper

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
config/: ablation_llama8b_v2_arc.yaml  ablation_llama8b_v2_mmlu.yaml  ablation_llama8b_v3_arc.yaml  ablation_llama8b_v3_mmlu.yaml  ablation_qwen7b_v2_arc.yaml  ablation_qwen7b_v2_mmlu.yaml  ablation_qwen7b_v3_arc.yaml  ablation_qwen7b_v3_mmlu.yaml  default.yaml  dummy.yaml  llama70b_arc_abcd.yaml  llama70b_arc_challenge_redo_abcd.yaml  llama70b_arc_challenge_redo_aoi_cyclic.yaml  llama70b_arc_core.yaml  llama70b_arc_expensive.yaml  llama70b_arc_text_extraction.yaml  llama70b_mmlu_abcd.yaml  llama70b_mmlu_core.yaml  llama70b_mmlu_expensive.yaml  llama70b_mmlu_redo_abcd.yaml  llama70b_mmlu_redo_aoi_cyclic.yaml  llama70b_mmlu_text_extraction.yaml  llama8b_arc_abcd.yaml  llama8b_arc_challenge_redo_abcd.yaml  llama8b_arc_challenge_redo_aoi_cyclic.yaml  llama8b_arc_core.yaml  llama8b_arc_expensive.yaml  llama8b_arc_independent_hypothesis.yaml  llama8b_arc_text_extraction.yaml  llama8b_mmlu_abcd.yaml  llama8b_mmlu_core.yaml  llama8b_mmlu_expensive.yaml  llama8b_mmlu_independent_hypothesis.yaml  llama8b_mmlu_redo_abcd.yaml  llama8b_mmlu_redo_aoi_cyclic.yaml  llama8b_mmlu_text_extraction.yaml  qwen32b_arc_abcd.yaml  qwen32b_arc_challenge_redo_abcd.yaml  qwen32b_arc_challenge_redo_aoi_cyclic.yaml  qwen32b_arc_core.yaml  (+56 more)
scripts/: aggregate_results.py  build_master_table.py  env_kelvin2.sh  evaluate_run.py  prepare_data.py  prepare_patch_checkpoints.py  recompute_pride_calibration.py  run_experiment.py
(+143 files in other folders)
